chore: Simplify